Increased java version 1.8 => 11. Removed the reference to the github mvn repo for distribution